k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: hermes
spec:
  ports:
    - name: "8443"
      port: 8443
      targetPort: 8443
  selector:
    app: keycloak
